# similarities

./: .gitignore  README.md  default.env  docker-compose.yaml
backend/: Dockerfile  app.py  logging_config.json  pyproject.toml  queue_settings.py
backend/similarities/: api.py  db.py  histograms.py  models.py  processing.py  serializers.py  storage.py
backend/tests/: conftest.py  test_api.py  test_processing.py
backend/tests/assets/: __init__.py
fe/: index.html
proxy/: default.conf
